--- a/src/app/sample-form/sample-form.component.html
+++ b/src/app/sample-form/sample-form.component.html
@@ -12,7 +12,7 @@
           style="width: 100%"
           [class.mat-form-field-invalid]="input.validation_status"
         >
-          <mat-label [labelFor]="input.id">{{ input.name }}</mat-label>
+          <mat-label>{{ input.name }}</mat-label>
           <input
             matInput
             setValidationFlag
